[package]
name = "jupiter-amm-interface"
version = "0.6.1"
license = "Apache-2.0"
edition = "2021"
description = "AMM interface to integrate a DEX into jupiter-core"
keywords = ["solana", "jupiter", "aggregator"]

[dependencies]
ahash = "0.8"
anyhow = "1"
rust_decimal = "1.36.0"
serde = "1.0.197"
serde_json = "1.0.114"
solana-account = { version =">=2", features = ["serde"]}
solana-account-decoder = ">=2"
solana-clock = ">=2"
solana-instruction = ">=2"
solana-pubkey = ">=2"

