[package]
name = "jupiter-amm-interface"
version = "0.6.1"
edition = "2024"
rust-version = "1.85.0"
description = "AMM interface to integrate a DEX into jupiter-core"
repository = "https://github.com/jup-ag/jupiter-amm-interface/"
license = "Apache-2.0"
keywords = ["solana", "jupiter", "aggregator"]

[dependencies]
anyhow = "1.0.100"
ahash = "0.8.12"
rust_decimal = "1.36.0"
serde = "1.0.197"
serde_json = "1.0.114"
solana-account = { version = "3.4.0", features = ["serde"] }
solana-account-decoder = { version = "3.0.13", features = ["agave-unstable-api"] }
solana-clock = "3.0.0"
solana-instruction = "3.1.0"
solana-program-error = "3.0.0"
solana-pubkey = "4.0.0"
thiserror = "2.0.18"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
