[package]
name = "jupiter-amm-interface"
version = "0.6.1"
edition = "2024"
rust-version = "1.85.0"
description = "AMM interface to integrate a DEX into jupiter-core"
repository = "https://github.com/jup-ag/jupiter-amm-interface/"
license = "Apache-2.0"
keywords = ["solana", "jupiter", "aggregator"]

[dependencies]
anyhow = "1"
rust_decimal = "1.36.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
solana-account = { version = "3.4.0", features = ["serde"] }
solana-clock = "3.0.0"
solana-instruction = "3.1.0"
solana-pubkey = "4.0.0"
thiserror = "2.0.18"
